<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#A7A7A7"
    android:orientation="vertical"
    android:padding="5dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip" >

    <ImageView
        android:id="@+id/uploaderImage"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:background="@drawable/customshape2" />

    <TextView
        android:id="@+id/Uploader"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_gravity="bottom"
        android:text="Uploader"
        android:background="@drawable/customshape1"
        android:ems="10" >

        <requestFocus />
    </TextView>
    
    </LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/customshape3"
    android:minHeight="125dp"
    android:orientation="horizontal" >

<LinearLayout
     android:layout_width="wrap_content"
   	 android:layout_height="fill_parent"
   	 android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_marginTop="5dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/listviewpic" >
         </ImageView>
        
    <TextView
        android:id="@+id/numberofvideos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/numberofvideos" />
    
    </LinearLayout>

    
    <RelativeLayout
    android:layout_width="0dip"
    android:layout_height="fill_parent"
    android:layout_weight="3"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/albumtitle"
        android:layout_marginTop="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/albumtitle">
    </TextView>
    
    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/albumtitle"
        android:text="@string/desc" />
    
    </RelativeLayout>
    
</LinearLayout>
</LinearLayout>