<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/myLayout"
        android:layout_width="match_parent"
        android:layout_height="110dip" >

        <TextView
            android:id="@+id/matchTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:text="@string/matchTime"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/teamIcon1"
                    android:layout_width="80dip"
                    android:layout_height="80dip"
                    android:contentDescription="@string/iconDesc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/loading" />

                <TextView
                    android:id="@+id/teamName1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/teamName"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/versus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/versus"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/teamIcon2"
                    android:layout_width="80dip"
                    android:layout_height="80dip"
                    android:contentDescription="@string/iconDesc"
                    android:scaleType="centerCrop"
                    android:src="@drawable/loading" />

                <TextView
                    android:id="@+id/teamName2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/teamName"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
        
            <!-- Draw a red line -->


        
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dip"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/myLayout"
        android:background="#FF0000" />
</RelativeLayout>